@@ -1,5 +1,4 @@
-# $NetBSD: Makefile.common,v 1.2 2015/03/15 17:04:44 hiramatsu Exp $
-# used by textproc/p5-yamcha/Makefile
+# $NetBSD: Makefile.common,v 1.3 2022/01/08 12:02:22 wiz Exp $
 # used by textproc/py-yamcha/Makefile
 # used by textproc/ruby-yamcha/Makefile
 
